Dodalem sekcje z operacjami na stringach

--- a/hej_python3.ipynb
+++ b/hej_python3.ipynb
@@ -30,16 +30,16 @@
       "metadata": {
         "id": "K3zJrh9hDHx0",
         "colab_type": "code",
+        "outputId": "fa231a65-f382-4163-dce4-d1cd49297a2a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "fa231a65-f382-4163-dce4-d1cd49297a2a"
+        }
       },
       "source": [
         "print(\"Hello World!\")"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -75,7 +75,7 @@
         "zmienna = 5\n",
         "print (zmienna)"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -93,7 +93,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Formatowanie wypisywanych napisów"
+        "# Formatowanie print"
       ]
     },
     {
@@ -101,22 +101,113 @@
       "metadata": {
         "id": "bSydskWfbNcx",
         "colab_type": "code",
+        "outputId": "eec11bb0-0b12-4240-c028-48583410690c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "eec11bb0-0b12-4240-c028-48583410690c"
+        }
       },
       "source": [
         "zmienna = 5\n",
         "print(f\"Wartosc zmiennej to {zmienna}\")"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Wartosc zmiennej to 5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xB_zCOyMateN",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Stringi"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "miY9fQAIaxjm",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "25136c8e-9a16-417b-da0b-87b1821035e3"
+      },
+      "source": [
+        "str = \"123123123\\n\"\n",
+        "print(str + \"HEJ\")"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "123123123\n",
+            "HEJ\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0nMWEk63dune",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "528f7eaa-9f7f-4bfe-a7e1-1d288206837b"
+      },
+      "source": [
+        "print(str.strip()+ \"HEJ\")"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "123123123HEJ\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tzFnxU43d3XI",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "c5b7e57f-105a-4ff1-d171-dc783b366319"
+      },
+      "source": [
+        "s = \"123 456\\n\"\n",
+        "a , b = s.strip().split()\n",
+        "print(a)\n",
+        "print(b)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "123\n",
+            "456\n"
           ],
           "name": "stdout"
         }
@@ -137,11 +228,11 @@
       "metadata": {
         "id": "QLbFE_HODpmQ",
         "colab_type": "code",
+        "outputId": "ebf18e34-f5c3-4116-dbb3-f389e6555ca1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "ebf18e34-f5c3-4116-dbb3-f389e6555ca1"
+        }
       },
       "source": [
         "x = 5\n",
@@ -150,7 +241,7 @@
         "\n",
         "    "
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -176,11 +267,11 @@
       "metadata": {
         "id": "064TxI0jD5pd",
         "colab_type": "code",
+        "outputId": "1fd157f1-9abb-4a32-cb19-11f2adb6a310",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "1fd157f1-9abb-4a32-cb19-11f2adb6a310"
+        }
       },
       "source": [
         "i = 2\n",
@@ -188,7 +279,7 @@
         "    print(i, end=\" \") # domyslnie print automatycznie dodaje koniec linii, ale mozna to zachowanie zmienic\n",
         "    i += 1 # zwieksz i o jeden"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,18 +306,18 @@
       "metadata": {
         "id": "vvWqLIJVbwhJ",
         "colab_type": "code",
+        "outputId": "94111b5e-fc70-44cf-d152-ca675b23ec8d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 101
-        },
-        "outputId": "94111b5e-fc70-44cf-d152-ca675b23ec8d"
+        }
       },
       "source": [
         "# petla wykonujaca 5 obrotow\n",
         "for i in range(5):\n",
         "  print(f\"Obrót numer {i}.\")"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -257,11 +348,11 @@
       "metadata": {
         "id": "77vYmR9JEZKq",
         "colab_type": "code",
+        "outputId": "02607333-4919-42aa-e07f-7be9e670fc89",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 50
-        },
-        "outputId": "02607333-4919-42aa-e07f-7be9e670fc89"
+        }
       },
       "source": [
         "lista = [] # stworz pusta liste\n",
@@ -279,7 +370,7 @@
         "    print(element, end=\" \") \n",
         "    i += 1"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,17 +397,17 @@
       "metadata": {
         "id": "_Q7vj07OEtlY",
         "colab_type": "code",
+        "outputId": "2d1671ac-b88c-4cee-831c-68ebec930fb2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "2d1671ac-b88c-4cee-831c-68ebec930fb2"
+        }
       },
       "source": [
         "for element in lista:  # for dla kazdego elementu w liscie\n",
         "    print(element, end=\" \")"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -352,11 +443,11 @@
       "metadata": {
         "id": "LVmIKLXCE0tu",
         "colab_type": "code",
+        "outputId": "b0c5c8d0-43fe-4ef7-a19b-e818fc88efdb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "b0c5c8d0-43fe-4ef7-a19b-e818fc88efdb"
+        }
       },
       "source": [
         "def pomnoz(a, b):\n",
@@ -365,7 +456,7 @@
         "\n",
         "print(\"Funkcja zwrocila:\" , pomnoz(2,3))"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -391,11 +482,11 @@
       "metadata": {
         "id": "zbAySpUlcJoG",
         "colab_type": "code",
+        "outputId": "ee5a800e-24a5-4a1c-b056-c9a104d63334",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
-        },
-        "outputId": "ee5a800e-24a5-4a1c-b056-c9a104d63334"
+        }
       },
       "source": [
         "krotka = (\"Adam Nowak\", 23, \"Warszawa\")\n",
@@ -406,7 +497,7 @@
         "print(wiek)\n",
         "print(miasto)"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -435,18 +526,18 @@
       "metadata": {
         "id": "akfmORFbdJ2J",
         "colab_type": "code",
+        "outputId": "1a80b9d6-3ca5-45a1-b469-54d83f057bbf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 178
-        },
-        "outputId": "1a80b9d6-3ca5-45a1-b469-54d83f057bbf"
+        }
       },
       "source": [
         "# uwaga niepoprawny kod\n",
         "krotka = (1,2)\n",
         "krotka[0] = 1"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
@@ -561,11 +652,11 @@
       "metadata": {
         "id": "hTW58XFftEA-",
         "colab_type": "code",
+        "outputId": "40088906-cc43-489e-a5e9-e0834148816b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
-        },
-        "outputId": "40088906-cc43-489e-a5e9-e0834148816b"
+        }
       },
       "source": [
         "skroty =\t{\n",
@@ -577,7 +668,7 @@
         "print(skroty[\"w3c\"])\n",
         "print(skroty[\"js\"])"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -595,16 +686,16 @@
       "metadata": {
         "id": "yg4olgeevXBB",
         "colab_type": "code",
+        "outputId": "a28ba942-876d-4a38-cda9-fce5e470b8e4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "a28ba942-876d-4a38-cda9-fce5e470b8e4"
+        }
       },
       "source": [
         "print(skroty)"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -630,17 +721,17 @@
       "metadata": {
         "id": "iyM3Q8vsva5j",
         "colab_type": "code",
+        "outputId": "473dc705-450f-4c35-804f-a09f4144a7dc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
-        },
-        "outputId": "473dc705-450f-4c35-804f-a09f4144a7dc"
+        }
       },
       "source": [
         "for klucz, wartosc in skroty.items():\n",
         "  print(f\"Skrót {klucz} oznacza {wartosc}.\")"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -648,42 +739,6 @@
             "Skrót pw oznacz Politechnika Warszawska.\n",
             "Skrót w3c oznacz World Wide Web Consortium.\n",
             "Skrót js oznacz javascript.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "BQ5colXG52ZO",
-        "colab_type": "text"
-      },
-      "source": [
-        "# Wczytywanie z pliku tekstowego"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "t0aRx0288ZT6",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "0e5a091c-acbf-4645-d9f5-dff688805977"
-      },
-      "source": [
-        "!ls\n",
-        "\n"
-      ],
-      "execution_count": 39,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "sample_data\n"
           ],
           "name": "stdout"
         }
