added list slicing to jupiter

--- a/hej_python3.ipynb
+++ b/hej_python3.ipynb
@@ -137,17 +137,17 @@
       "metadata": {
         "id": "miY9fQAIaxjm",
         "colab_type": "code",
+        "outputId": "25136c8e-9a16-417b-da0b-87b1821035e3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 50
-        },
-        "outputId": "25136c8e-9a16-417b-da0b-87b1821035e3"
+        }
       },
       "source": [
         "str = \"123123123\\n\"\n",
         "print(str + \"HEJ\")"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,16 +164,16 @@
       "metadata": {
         "id": "0nMWEk63dune",
         "colab_type": "code",
+        "outputId": "528f7eaa-9f7f-4bfe-a7e1-1d288206837b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "528f7eaa-9f7f-4bfe-a7e1-1d288206837b"
+        }
       },
       "source": [
         "print(str.strip()+ \"HEJ\")"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -189,11 +189,11 @@
       "metadata": {
         "id": "tzFnxU43d3XI",
         "colab_type": "code",
+        "outputId": "c5b7e57f-105a-4ff1-d171-dc783b366319",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 50
-        },
-        "outputId": "c5b7e57f-105a-4ff1-d171-dc783b366319"
+        }
       },
       "source": [
         "s = \"123 456\\n\"\n",
@@ -201,7 +201,7 @@
         "print(a)\n",
         "print(b)"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -413,6 +413,99 @@
           "output_type": "stream",
           "text": [
             "jeden 2 trzy "
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JCIECr0BpBMR",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Slice notation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8jSEhOzfp92d",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "a[start:stop]  # items start through stop-1\n",
+        "a[start:]      # items start through the rest of the array\n",
+        "a[:stop]       # items from the beginning through stop-1\n",
+        "a[:]           # a copy of the whole array\n",
+        "\n",
+        "a[start:stop:step] # start through not past stop, by step\n",
+        "\n",
+        "a[-1]    # last item in the array\n",
+        "a[-2:]   # last two items in the array\n",
+        "a[:-2]   # everything except the last two items\n",
+        "\n",
+        "a[::-1]    # all items in the array, reversed\n",
+        "a[1::-1]   # the first two items, reversed\n",
+        "a[:-3:-1]  # the last two items, reversed\n",
+        "a[-3::-1]  # everything except the last two items, reversed\n",
+        "```\n",
+        "\n",
+        "[stackoverflow](https://stackoverflow.com/questions/509211/understanding-slice-notation)\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "grUoQM2zpGkv",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "936937be-63d3-4e08-da17-349758ee2514"
+      },
+      "source": [
+        "lista = [0,1,2,3,4,5,6]\n",
+        "\n",
+        "print(lista[0:7:1])"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0, 1, 2, 3, 4, 5, 6]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "S1PZ_HfAqdJU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d87ade8b-0da0-4f73-b250-ccba72b76649"
+      },
+      "source": [
+        "print(lista[-1::-1])"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[6, 5, 4, 3, 2, 1, 0]\n"
           ],
           "name": "stdout"
         }
