--- a/hej_python3.ipynb
+++ b/hej_python3.ipynb
@@ -18,6 +18,30 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "UgLLldZiR3uh",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Wstęp\n",
+        "Opisy do fragmentów kodu umieszczam pod spodem, a nie nad.\\\n",
+        "Myślę, że najpierw lepiej jest przeczytać kodu, a dopiero później jego opis.\\\n",
+        "Czasami kod mówi więcej niż 1000 słów :D\\"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HeQJ1-yGOrHv",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Wprowadzenie\n",
+        "Programy napisane w pythonie wykonują się linijka po linijce, zaczynając od początku. W przeciwieństwie do c++ nie trzeba pisać żadnej specjalnej funkcji main."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "DBnH7VIcDC_U",
         "colab_type": "text"
       },
@@ -48,6 +72,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5-CzmNh_PJhk",
+        "colab_type": "text"
+      },
+      "source": [
+        "Wypisujemny na ekran używając funkcji print(), odpowiednik `cout<<` z c++."
       ]
     },
     {
@@ -89,11 +123,162 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "CS188cruPRUM",
+        "colab_type": "text"
+      },
+      "source": [
+        "Aby utworzyć nową zmienną po prostu wpisujemy jej nazwe i nadajemy jej jakąś wartość.\\\n",
+        "W przeciwie do c++, do definiowania zmiennych nie używamy słów kluczowych typu `int, float, string`."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "FzA5-7DbSXDE",
         "colab_type": "text"
       },
       "source": [
-        "# Formatowanie print"
+        "# Funkcja print()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rSk-fJAES0UW",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "3cafcf96-0012-4769-b973-ee48f717b127"
+      },
+      "source": [
+        "print(\"tekst\")\n",
+        "print(\"tekst2\")"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "tekst\n",
+            "tekst2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Xe6gv7NhS35Z",
+        "colab_type": "text"
+      },
+      "source": [
+        "Domyślnie funkcja print zawsze na końcu dodaje znak końca linii."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Lw9hTJUPTAsL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "e3da0f17-7dd2-4004-ead9-609b0610e34c"
+      },
+      "source": [
+        "print(\"tekst\" , end=\"\")\n",
+        "print(\"tekst2\")\n",
+        "print(\"tekst3\")"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "teksttekst2\n",
+            "tekst3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fQ4zLfShTMWz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "476c683e-037a-4131-cdbb-cec252bbed2f"
+      },
+      "source": [
+        "print(\"teskt\", end=\" \")\n",
+        "print(\"teskt2\")"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "teskt teskt2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7dw8ecuoTVGZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "Oczywiście można zmienić to domyślne zachowanie. Aby to zrobić przekazujemy argument nazwany `end` do wywołania funkcji."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NwzU5SojT3kT",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "29059e81-1d80-452b-c7ca-b506850eda6b"
+      },
+      "source": [
+        "s = \"tekst\"\n",
+        "s2 = \"tekst2\"\n",
+        "zmienna = 5\n",
+        "\n",
+        "print(s,zmienna,s2)\n"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "tekst 5 tekst2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bzi_LGCUUP11",
+        "colab_type": "text"
+      },
+      "source": [
+        "A tak możemy wypisać kilka wartości oddzielonych spacją."
       ]
     },
     {
@@ -101,25 +286,71 @@
       "metadata": {
         "id": "bSydskWfbNcx",
         "colab_type": "code",
-        "outputId": "eec11bb0-0b12-4240-c028-48583410690c",
+        "outputId": "16c6e474-0b34-4e3d-cc73-701ae6cf0969",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         }
       },
       "source": [
         "zmienna = 5\n",
-        "print(f\"Wartosc zmiennej to {zmienna}\")"
+        "print(f\"Wartosc zmiennej to {zmienna}.\")"
       ],
-      "execution_count": 0,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Wartosc zmiennej to 5\n"
+            "Wartosc zmiennej to 5.\n"
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VYQCGrTgRKMz",
+        "colab_type": "text"
+      },
+      "source": [
+        "Do formatowania złożonych stringów używamy składni `f\"Tekst {zmiena} tekst {zmienna2}\"`. Czyli w tekście w nawiasach klamrowych podajemy co chcemy w danym miejscu podstawić."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "outputId": "7114ad7f-3cb4-44b3-b7f5-fbf40fae2dcd",
+        "id": "EdNm0Qc_Ui7-",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "zmienna = 5\n",
+        "print(\"Wartosc zmiennej to {zmienna}.\")"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Wartosc zmiennej to {zmienna}.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iHlE4IMGUlJP",
+        "colab_type": "text"
+      },
+      "source": [
+        "Bez f z przodu \"\" nie działa."
       ]
     },
     {
@@ -137,17 +368,18 @@
       "metadata": {
         "id": "miY9fQAIaxjm",
         "colab_type": "code",
-        "outputId": "25136c8e-9a16-417b-da0b-87b1821035e3",
+        "outputId": "a71382be-571f-4eac-eeb5-1065b6ed4481",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 50
+          "height": 54
         }
       },
       "source": [
-        "str = \"123123123\\n\"\n",
-        "print(str + \"HEJ\")"
+        "s = \"33333\\n\"\n",
+        "s2 = s + \"HEJ\"\n",
+        "print(s2)"
       ],
-      "execution_count": 0,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -160,28 +392,53 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Z4IQTRD5StG6",
+        "colab_type": "text"
+      },
+      "source": [
+        "\\n wewnątrz stringa symbolizuje znak końca lini"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "0nMWEk63dune",
         "colab_type": "code",
-        "outputId": "528f7eaa-9f7f-4bfe-a7e1-1d288206837b",
+        "outputId": "025fd7e1-827c-4f8a-8821-101b8e615040",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         }
       },
       "source": [
-        "print(str.strip()+ \"HEJ\")"
+        "s = \"aaaaa\\n\"\n",
+        "s2 = s.strip() + \"HEJ\"\n",
+        "print(s2)"
       ],
-      "execution_count": 0,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "123123123HEJ\n"
+            "aaaaaHEJ\n"
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SjVQAwERVIeY",
+        "colab_type": "text"
+      },
+      "source": [
+        "Aby pozbyć się białych znaków ze stringa używamy metody `strip()`\n",
+        "\n",
+        "---\n",
+        "\n"
       ]
     },
     {
@@ -197,7 +454,7 @@
       },
       "source": [
         "s = \"123 456\\n\"\n",
-        "a , b = s.strip().split()\n",
+        "a , b = s.split()\n",
         "print(a)\n",
         "print(b)"
       ],
@@ -211,6 +468,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yLMOpAEiWSTr",
+        "colab_type": "text"
+      },
+      "source": [
+        "W ten sposób możemy rozbić stringa na poszczególne fragmenty. Rozbijamy po białych znakach."
       ]
     },
     {
@@ -250,6 +517,82 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aiJ5arWnWqFi",
+        "colab_type": "text"
+      },
+      "source": [
+        "Ify są bardzo podobne do c++, tylko nie piszemy nawiasów okrągłych po `if`."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_p8yUf4TGGf8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "5f3bd39b-6dfb-4e44-d2d6-d732c0122df7"
+      },
+      "source": [
+        "x = 1\n",
+        "if x == 1 or x == 3:\n",
+        "  print(\"to prawda, że: x ==1 or x == 3\")"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "to prawda, że: x ==1 or x == 3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y56vpbj0GWEB",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "ca485b55-ab25-4353-dce7-6b5de55cd669"
+      },
+      "source": [
+        "x = 1\n",
+        "y = 2\n",
+        "if x == 1 and y == 2:\n",
+        "  print(\"to prawda, że x == 1 and y == 2\")"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "to prawda, że x == 1 and y == 2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "weAIxz-cGBqn",
+        "colab_type": "text"
+      },
+      "source": [
+        "Możemy łączyć warunki za pomocą operatorów and i or.  \n",
+        "Analogicznie do && oraz || z c++."
       ]
     },
     {
@@ -297,8 +640,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Pętla for\n",
-        "Pętle for są najbardziej użyteczne, gdy z góry wiemy ile obrotów pętli chcemy wykonać."
+        "# Pętla for"
       ]
     },
     {
@@ -306,30 +648,84 @@
       "metadata": {
         "id": "vvWqLIJVbwhJ",
         "colab_type": "code",
-        "outputId": "94111b5e-fc70-44cf-d152-ca675b23ec8d",
+        "outputId": "46b410d4-7dc5-4d88-e07a-f3669f1a8ba4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 101
+          "height": 108
         }
       },
       "source": [
-        "# petla wykonujaca 5 obrotow\n",
         "for i in range(5):\n",
-        "  print(f\"Obrót numer {i}.\")"
+        "  print(f\"i = {i}\")"
       ],
-      "execution_count": 0,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Obrót numer 0.\n",
-            "Obrót numer 1.\n",
-            "Obrót numer 2.\n",
-            "Obrót numer 3.\n",
-            "Obrót numer 4.\n"
+            "i = 0\n",
+            "i = 1\n",
+            "i = 2\n",
+            "i = 3\n",
+            "i = 4\n"
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XRcwjE1IW_A6",
+        "colab_type": "text"
+      },
+      "source": [
+        "Pętle for są najbardziej użyteczne, gdy z góry wiemy ile obrotów pętli chcemy wykonać. Dla wszystich liczb od 3 do 5, albo zrób coś 5 razy."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5M9jCNQHXR5U",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 90
+        },
+        "outputId": "05b0a034-61db-411d-d4f0-5d66d39195ea"
+      },
+      "source": [
+        "for i in range(2,5):\n",
+        "  print(i)"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "28Lmw25IXYgn",
+        "colab_type": "text"
+      },
+      "source": [
+        "Aby zacząć od liczby innej niż `0` podajemy do `range(start,koniec)` dwa argumenty. Zwróc uwagę, że pętla nie wykona się już dla 5.\n",
+        "Analogicznym kodem w c++ byłoby:\\\n",
+        "`for (int i = 2; i < 5; i ++)\n",
+        "{\n",
+        "  cout<<i<<endl;\n",
+        "}\n",
+        "`"
       ]
     },
     {
@@ -340,7 +736,7 @@
       },
       "source": [
         "# Listy\n",
-        "(zastępują tablice z c/c++)"
+        "Listy zastępują tablice z c++. Tylko listy potrafią trochę więcej."
       ]
     },
     {
@@ -383,16 +779,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "6orioliJEoeZ",
-        "colab_type": "text"
-      },
-      "source": [
-        "### For: drugi, lepszy spsób na przechodznie po elementach listy:"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "_Q7vj07OEtlY",
@@ -416,6 +802,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6orioliJEoeZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "lepszy spsób na przechodznie po elementach listy"
       ]
     },
     {
@@ -464,18 +860,18 @@
       "metadata": {
         "id": "grUoQM2zpGkv",
         "colab_type": "code",
+        "outputId": "936937be-63d3-4e08-da17-349758ee2514",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "936937be-63d3-4e08-da17-349758ee2514"
+        }
       },
       "source": [
         "lista = [0,1,2,3,4,5,6]\n",
         "\n",
         "print(lista[0:7:1])"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -491,16 +887,16 @@
       "metadata": {
         "id": "S1PZ_HfAqdJU",
         "colab_type": "code",
+        "outputId": "d87ade8b-0da0-4f73-b250-ccba72b76649",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "d87ade8b-0da0-4f73-b250-ccba72b76649"
+        }
       },
       "source": [
         "print(lista[-1::-1])"
       ],
-      "execution_count": 50,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -519,16 +915,6 @@
       },
       "source": [
         "# Funkcje"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "X0GcItPn5PuI",
-        "colab_type": "text"
-      },
-      "source": [
-        "Do definiowania funkcji używamy słowa kluczowego def."
       ]
     },
     {
@@ -558,6 +944,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "X0GcItPn5PuI",
+        "colab_type": "text"
+      },
+      "source": [
+        "Do definiowania funkcji używamy słowa kluczowego def."
       ]
     },
     {
