--- a/hej_python3.ipynb
+++ b/hej_python3.ipynb
@@ -31,11 +31,21 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "ygkGqSrYkBi9",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Podstawy Pythona"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "HeQJ1-yGOrHv",
         "colab_type": "text"
       },
       "source": [
-        "# Wprowadzenie\n",
+        "## Wprowadzenie\n",
         "Programy napisane w pythonie wykonują się linijka po linijce, zaczynając od początku. W przeciwieństwie do c++ nie trzeba pisać żadnej specjalnej funkcji main."
       ]
     },
@@ -46,7 +56,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Hello World!"
+        "## Hello World!"
       ]
     },
     {
@@ -91,7 +101,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Zmienne w Pythonie"
+        "## Zmienne w Pythonie"
       ]
     },
     {
@@ -138,7 +148,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Funkcja print()"
+        "## Funkcja print()"
       ]
     },
     {
@@ -146,17 +156,17 @@
       "metadata": {
         "id": "rSk-fJAES0UW",
         "colab_type": "code",
+        "outputId": "3cafcf96-0012-4769-b973-ee48f717b127",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        },
-        "outputId": "3cafcf96-0012-4769-b973-ee48f717b127"
+        }
       },
       "source": [
         "print(\"tekst\")\n",
         "print(\"tekst2\")"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,18 +193,18 @@
       "metadata": {
         "id": "Lw9hTJUPTAsL",
         "colab_type": "code",
+        "outputId": "e3da0f17-7dd2-4004-ead9-609b0610e34c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        },
-        "outputId": "e3da0f17-7dd2-4004-ead9-609b0610e34c"
+        }
       },
       "source": [
         "print(\"tekst\" , end=\"\")\n",
         "print(\"tekst2\")\n",
         "print(\"tekst3\")"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -211,17 +221,17 @@
       "metadata": {
         "id": "fQ4zLfShTMWz",
         "colab_type": "code",
+        "outputId": "476c683e-037a-4131-cdbb-cec252bbed2f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "476c683e-037a-4131-cdbb-cec252bbed2f"
+        }
       },
       "source": [
         "print(\"teskt\", end=\" \")\n",
         "print(\"teskt2\")"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -247,11 +257,11 @@
       "metadata": {
         "id": "NwzU5SojT3kT",
         "colab_type": "code",
+        "outputId": "29059e81-1d80-452b-c7ca-b506850eda6b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "29059e81-1d80-452b-c7ca-b506850eda6b"
+        }
       },
       "source": [
         "s = \"tekst\"\n",
@@ -260,7 +270,7 @@
         "\n",
         "print(s,zmienna,s2)\n"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -296,7 +306,7 @@
         "zmienna = 5\n",
         "print(f\"Wartosc zmiennej to {zmienna}.\")"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -332,7 +342,7 @@
         "zmienna = 5\n",
         "print(\"Wartosc zmiennej to {zmienna}.\")"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -360,7 +370,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Stringi"
+        "## Stringi"
       ]
     },
     {
@@ -379,7 +389,7 @@
         "s2 = s + \"HEJ\"\n",
         "print(s2)"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -417,7 +427,7 @@
         "s2 = s.strip() + \"HEJ\"\n",
         "print(s2)"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -487,7 +497,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Warunki (if)\n"
+        "## Warunki (if)\n"
       ]
     },
     {
@@ -534,18 +544,18 @@
       "metadata": {
         "id": "_p8yUf4TGGf8",
         "colab_type": "code",
+        "outputId": "5f3bd39b-6dfb-4e44-d2d6-d732c0122df7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "5f3bd39b-6dfb-4e44-d2d6-d732c0122df7"
+        }
       },
       "source": [
         "x = 1\n",
         "if x == 1 or x == 3:\n",
         "  print(\"to prawda, że: x ==1 or x == 3\")"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -561,11 +571,11 @@
       "metadata": {
         "id": "y56vpbj0GWEB",
         "colab_type": "code",
+        "outputId": "ca485b55-ab25-4353-dce7-6b5de55cd669",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "ca485b55-ab25-4353-dce7-6b5de55cd669"
+        }
       },
       "source": [
         "x = 1\n",
@@ -573,7 +583,7 @@
         "if x == 1 and y == 2:\n",
         "  print(\"to prawda, że x == 1 and y == 2\")"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -602,7 +612,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Pętla while"
+        "## Pętla while"
       ]
     },
     {
@@ -640,7 +650,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Pętla for"
+        "## Pętla for"
       ]
     },
     {
@@ -658,7 +668,7 @@
         "for i in range(5):\n",
         "  print(f\"i = {i}\")"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -688,17 +698,17 @@
       "metadata": {
         "id": "5M9jCNQHXR5U",
         "colab_type": "code",
+        "outputId": "05b0a034-61db-411d-d4f0-5d66d39195ea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 90
-        },
-        "outputId": "05b0a034-61db-411d-d4f0-5d66d39195ea"
+        }
       },
       "source": [
         "for i in range(2,5):\n",
         "  print(i)"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -735,7 +745,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Listy\n",
+        "## Listy\n",
         "Listy zastępują tablice z c++. Tylko listy potrafią trochę więcej."
       ]
     },
@@ -817,11 +827,169 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "7BkUEzLjcLSQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "### List comprehension"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rszwN8MNcsh0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "liczby = [1,2,3]\n",
+        "potegi = []\n",
+        "for x in liczby:\n",
+        "  potegi.append(x^^2)\n",
+        "print(potegi)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ow2-H_TOc8qZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "Kod podobny do powższego jest pisany tak często, że wymyślono odpowiadającą mu, krótszą składnię."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uW-RSEA9cXH9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "6b3f8c3e-1ab2-4388-93f7-0d76eb242f78"
+      },
+      "source": [
+        "liczby = [1 , 2 , 3]\n",
+        "potegi = [x**2 for x in liczby]\n",
+        "print(potegi)"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 4, 9]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mg0cX3BJcm2S",
+        "colab_type": "text"
+      },
+      "source": [
+        "Składnia to `[wyrażenie for element in lista]`\\\n",
+        "To stały, częsty  schemat:\n",
+        "1.   przechodzimy po elementach listy\n",
+        "2.   wykonujamy na nich jakąś opreację\n",
+        "3.   tworzymy z nich nową listę\n",
+        "\n",
+        "Nadano mu nawet nazwę: **mapowanie**\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rOe67P8keAix",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a9c527f9-c885-4206-9f35-b4b7c12e6a14"
+      },
+      "source": [
+        "liczby = [1,0,2,0,3,0,4,0]\n",
+        "bez_zer = []\n",
+        "for x in liczby:\n",
+        "  if x != 0:\n",
+        "    bez_zer.append(x^^2)\n",
+        "print(bez_zer)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3, 4]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Zy6VtlHkeTQ7",
+        "colab_type": "text"
+      },
+      "source": [
+        "W powyższym przykładzie oprócz mapowania mamy **filtrowanie**."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AydouZ_-eXll",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "9e6e929a-4335-4e50-87f4-4857eb598488"
+      },
+      "source": [
+        "liczby = [1,0,2,0,3,0,4,0]\n",
+        "bez_zer = [x for x in liczby if x!=0]\n",
+        "print(bez_zer)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3, 4]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "K5Oui7GqessJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "Składnia to [wyrażenie for element in lista if warunek]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "JCIECr0BpBMR",
         "colab_type": "text"
       },
       "source": [
-        "## Slice notation"
+        "### Slice notation"
       ]
     },
     {
@@ -914,7 +1082,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Funkcje"
+        "## Funkcje"
       ]
     },
     {
@@ -963,7 +1131,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Tuple (krotka)"
+        "## Tuple (krotka)"
       ]
     },
     {
@@ -1127,7 +1295,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Słownik\n",
+        "## Słownik\n",
         "Słowniki są strukturami bardziej złożonymi niż listy czy krotki. O słownikach pythonowych możemy myśleć trochę jak o tradycyjnych, papierowych słownikach. Weźmy na przykład taki słownik poprawnej polszczyzny. Załóżmy, że chcemy wyszukać definicji oraz synonimów do słowa 'pasja'. Moglibyśmy oczywiście przeglądać cały słownik po kolei, ale stracilibyśmy ogrom czasu. Na szczęście słownik skonstruowany w sposób, który ułatawia nam posługiwanie się nim. Zauważmy, że słownik składa się z wielu niezależnych elementów. Elementy te mają dwie części. Pierwszy to słowo **klucz**, którego definicja, synonimy i przykłady są podane w drugiej części elementu. Możemy powiedzieć, że cała ta druga część (definicja, synonimy, przykłądy), to **wartość** dla danego słowa klucz.  \n",
         "Możemy o słowniku myśleć jako zbiorze elementów słów kluczowych i wszystiego tego, co dotyczy danego słowa. Cała ta struktura, dla wygody szukającego, jest uporządkowana alfabetycznie wg słów kluczy.\n",
         "\n",
@@ -1231,6 +1399,114 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AtHobw1uj3K7",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Algorytmy"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1RS90181j471",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Obliczanie NWD - Algorytm Euklidesa\n",
+        "Największy wspólny dzielnik (NWD) to dla danych dwóch (lub więcej) liczb całkowitych największa liczba naturalna dzieląca każdą z nich."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ra0BSgakkq2X",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "83158656-f60f-40c2-bc41-8c95a607a6c1"
+      },
+      "source": [
+        "def nwd(a, b):\n",
+        "    while b:\n",
+        "        a, b = b, a%b\n",
+        "    return a\n",
+        "print(nwd(21,14))"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "7\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ASA9tzcJa08T",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Przykładowe programy"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mTE34JpwbD68",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Maksium z liczb\n",
+        "Napisz program, który wczyta ze standardowego wejścia liczby (oddzielonych spacją) i wypisze największa z nich."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "csWgPm2YbP-T",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "7b3b6e80-c1d0-4582-f299-9c0a10df101e"
+      },
+      "source": [
+        "liczby = [int(x) for x in input().split()]\n",
+        "print(max(liczby))"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2 5 2 12 100\n",
+            "100\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "omElW3objz3q",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     }
   ]
