--- a/hej_python3.ipynb
+++ b/hej_python3.ipynb
@@ -866,18 +866,18 @@
       "metadata": {
         "id": "uW-RSEA9cXH9",
         "colab_type": "code",
+        "outputId": "6b3f8c3e-1ab2-4388-93f7-0d76eb242f78",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "6b3f8c3e-1ab2-4388-93f7-0d76eb242f78"
+        }
       },
       "source": [
         "liczby = [1 , 2 , 3]\n",
         "potegi = [x**2 for x in liczby]\n",
         "print(potegi)"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -910,11 +910,11 @@
       "metadata": {
         "id": "rOe67P8keAix",
         "colab_type": "code",
+        "outputId": "a9c527f9-c885-4206-9f35-b4b7c12e6a14",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "a9c527f9-c885-4206-9f35-b4b7c12e6a14"
+        }
       },
       "source": [
         "liczby = [1,0,2,0,3,0,4,0]\n",
@@ -924,7 +924,7 @@
         "    bez_zer.append(x^^2)\n",
         "print(bez_zer)"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -950,18 +950,18 @@
       "metadata": {
         "id": "AydouZ_-eXll",
         "colab_type": "code",
+        "outputId": "9e6e929a-4335-4e50-87f4-4857eb598488",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "9e6e929a-4335-4e50-87f4-4857eb598488"
+        }
       },
       "source": [
         "liczby = [1,0,2,0,3,0,4,0]\n",
         "bez_zer = [x for x in liczby if x!=0]\n",
         "print(bez_zer)"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1404,6 +1404,78 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "RsD9kFhd-CXG",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Wczytywanie danych z pliku\n",
+        "Niestety nie mogę tutaj interaktywnie zaprezentować działania wczytywania plików, ponieważ nie mogę na stałe umieścić plików w tym środowisku uruchomieniowym :(. \\\n",
+        "Dane z pliku można wczytać na kilka sposobów, w zależności od potrzeb.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WOHvcupm-K0Q",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "with open('katalog/nazwa.txt') as plik:\n",
+        "  for line in plik:\n",
+        "    # tutaj line jest stringiem zawierajacym w każdym obrocie kolejna linie z pliku\n",
+        "  "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4HmJZtbW-pzF",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "with open('katalog/nazwa.txt') as plik:\n",
+        "  lines = plik.readlines()\n",
+        "  # dostajemy tablice skladajaca sie ze wszystkich lini w pliku"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eS5UTcI9-2wl",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "with open('katalog/nazwa.txt') as plik:\n",
+        "  while True:\n",
+        "    line = plik.readLine()\n",
+        "    if not line:\n",
+        "        break\n",
+        "    # to podejscie jest bardzo podobne do 'for line in plik', ale możemy tutaj np wczytać dwie linie na raz\n",
+        "    line2 = plik.readLine()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xnBDz8a9_lzJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "uwaga! powyższy przykład może nie zadziałać jeżeli w pliku będzie nieparzysta liczba linii"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "AtHobw1uj3K7",
         "colab_type": "text"
       },
@@ -1427,11 +1499,11 @@
       "metadata": {
         "id": "ra0BSgakkq2X",
         "colab_type": "code",
+        "outputId": "83158656-f60f-40c2-bc41-8c95a607a6c1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "83158656-f60f-40c2-bc41-8c95a607a6c1"
+        }
       },
       "source": [
         "def nwd(a, b):\n",
@@ -1440,7 +1512,7 @@
         "    return a\n",
         "print(nwd(21,14))"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1477,17 +1549,17 @@
       "metadata": {
         "id": "csWgPm2YbP-T",
         "colab_type": "code",
+        "outputId": "7b3b6e80-c1d0-4582-f299-9c0a10df101e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "7b3b6e80-c1d0-4582-f299-9c0a10df101e"
+        }
       },
       "source": [
         "liczby = [int(x) for x in input().split()]\n",
         "print(max(liczby))"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
